--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -34,6 +34,7 @@
   --font-size-p1: 20px;
   --font-size-p2: 16px;
   --font-size-p3: 14px;
+  --font-color-collapse-level1: rgba(0, 0, 0, 0.88);
   --inline-placeholder: 11px;
   --line-height-p3: 16px;
   --textbox-width: 250px;
