--- a/src/components/form/LawyerPreForm.css
+++ b/src/components/form/LawyerPreForm.css
@@ -1,62 +1,62 @@
 .form-content-preForm {
-  position: relative;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
   font-size: var(--font-size-p2);
+  background-color: var(--gray-color-4);
   flex-grow: 1;
   overflow-y: auto;
+  padding: 0px 40px 40px 40px;
   max-width: 1460px;
+}
+
+.form-content-container-preForm {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white-color);
+  height: 100%;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .form-content-header-preForm {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 40px 20px 40px;
-  background-color: var(--white-color);
-  border-radius: 10px 10px 0 0;
-  border-bottom: 1px solid var(--gray-color-4);
-}
-
-.xsmall .form-content-header-preForm,
-.small .form-content-header-preForm {
-  padding: 30px 20px;
+  flex-direction: column;
+  padding: 20px 30px;
 }
 
 .form-content-form-preForm {
   padding: 0;
-  background-color: var(--white-color);
-}
-
-.xsmall .form-content-form-preForm,
-.small .form-content-form-preForm {
-  padding: 20px;
 }
 
 .field-section-preForm {
-  padding: 30px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 7.5px;
+  padding: 20px 30px;
   margin: 0;
-  border-bottom: 1px solid var(--gray-color-4);
-}
-.form-content-form-preForm > div {
-  margin-bottom: 0;
+  border-top: 2px solid var(--gray-color-4);
 }
 .field-input-preForm {
   width: 250px;
   border-radius: 3px;
 }
+.immigType {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+@media (max-width: 768px) {
+  .immigType {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
 
 .form-content-controls-preForm {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px 40px;
-  background-color: var(--white-color);
-  border-radius: 0 0 10px 10px;
-  border-top: 0;
-}
-
-.xsmall .form-content-controls-preForm,
-.small .form-content-controls-preForm {
-  padding: 20px 10px;
 }
 
 .form-content-controls-preForm button {
