--- a/src/components/common/Fonts.css
+++ b/src/components/common/Fonts.css
@@ -72,3 +72,12 @@
   color: var(--gray-color-7);
   font-size: var(--inline-placeholder);
 }
+
+.qtag {
+  background-color: var(--gray-color-4);
+  border: 1px solid var(--gray-color-3);
+  border-radius: 5px;
+  padding: 2px 8px;
+  width: fit-content;
+  font-size: var(--font-size-p3);
+}
