Update the style of the Navbar

--- a/src/components/form/FormNavigation.css
+++ b/src/components/form/FormNavigation.css
@@ -36,7 +36,8 @@
 }
 
 .form-navigation-l2.active {
-  color: var(--primary-color);
+  color: var(--gray-color-1);
+  font-weight: 600;
   border-right: 3px solid var(--primary-color);
 }
 
@@ -55,5 +56,15 @@
 .nav-l1-label {
   display: flex;
   align-items: center;
-  gap: 10px;
+  justify-content: space-between;
+}
+
+.nav-l1-label svg {
+  fill: var(--primary-color);
+  font-size: large;
+  width: 48px;
+}
+
+.nav-l1-label .qtag {
+  width: 30px;
 }
