--- a/src/components/form/LawyerPreForm.css
+++ b/src/components/form/LawyerPreForm.css
@@ -5,15 +5,16 @@
   background-color: var(--gray-color-4);
   flex-grow: 1;
   overflow-y: auto;
-  padding: 0px 40px 40px 40px;
-  max-width: 1460px;
+  padding: 0px 80px 40px 80px;
+  height: 100%;
+  /* max-width: 1460px; */
 }
 
 .form-content-container-preForm {
   display: flex;
   flex-direction: column;
   background-color: var(--white-color);
-  height: 100%;
+  height: 80%;
   border-radius: 10px;
   box-sizing: border-box;
 }
@@ -21,7 +22,7 @@
 .form-content-header-preForm {
   display: flex;
   flex-direction: column;
-  padding: 20px 30px;
+  padding: 30px 30px;
 }
 
 .form-content-form-preForm {
@@ -31,8 +32,8 @@
 .field-section-preForm {
   display: flex;
   flex-direction: column;
-  gap: 7.5px;
-  padding: 20px 30px;
+  gap: 15px;
+  padding: 30px 30px;
   margin: 0;
   border-top: 2px solid var(--gray-color-4);
 }
@@ -74,7 +75,7 @@
 .email-modal-content-preForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-around;
 
   width: 30rem;
@@ -86,5 +87,6 @@
 }
 
 .email-send-button-preForm {
+  align-self: center;
   width: 100px;
 }
