--- a/src/components/pages/casestatus/CaseDocumentRightPanel.css
+++ b/src/components/pages/casestatus/CaseDocumentRightPanel.css
@@ -1,20 +1,20 @@
 .case-document-right-panel {
-    display:flex;
-    flex-direction: column;
-    padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  padding-top: 0;
 
-    border-radius: 12px;
+  border-radius: 12px;
 }
 
 .case-document-file-upload {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .case-document-section-header {
-    padding-left: 5px;
+  padding-left: 5px;
 }
 .case-document-section-content {
-    margin-top: 15px
+  margin-top: 15px;
 }
