--- a/src/components/pages/casestatus/CaseDocumentRightPanel.css
+++ b/src/components/pages/casestatus/CaseDocumentRightPanel.css
@@ -18,3 +18,26 @@
 .case-document-section-content {
     margin-top: 15px
 }
+
+.upload-modal-container {
+    margin:auto;
+    padding: 30px;
+}
+.upload-modal-body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 40px 0;
+}
+.upload-modal-body-fileIcon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding-left: 40px;
+}
+.upload-modal-body-fileInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
