--- a/src/components/pages/casestatus/CaseProgressCard.css
+++ b/src/components/pages/casestatus/CaseProgressCard.css
@@ -86,7 +86,7 @@ body {
 }
 
 .expanded-card .ant-card {
-  background-color: #f5f5f5;
+  background-color: #fff;
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   width: calc(100% - 28px);
