--- a/src/components/pages/casestatus/CaseDocumentRightPanel.css
+++ b/src/components/pages/casestatus/CaseDocumentRightPanel.css
@@ -22,7 +22,7 @@
   width: 500px;
 }
 .case-document-section-search-button {
-  border: 1px solid #27AE60;
+  border: 1px solid #27ae60;
   border-radius: 3px;
   margin-left: 10px;
   height: 40px;
@@ -38,8 +38,7 @@
 }
 .upload-modal-body {
   display: grid;
-  grid-template-areas: 
-    "fileIcon fileInfo";
+  grid-template-areas: "fileIcon fileInfo";
   grid-template-columns: 1fr 2fr;
   padding: 40px 0;
   align-items: center;
