--- a/src/components/pages/casestatus/CaseDocumentRightPanel.css
+++ b/src/components/pages/casestatus/CaseDocumentRightPanel.css
@@ -19,7 +19,7 @@
   padding-left: 5px;
 }
 .case-document-section-search-input {
-  width: 500px;
+  width: 400px;
 }
 .case-document-section-search-button {
   border: 1px solid #27ae60;
@@ -34,22 +34,27 @@
 
 .upload-modal-container {
   margin: auto;
-  padding: 30px;
+  padding: 32px;
 }
 .upload-modal-body {
   display: grid;
   grid-template-areas: "fileIcon fileInfo";
   grid-template-columns: 1fr 2fr;
-  padding: 40px 0;
+  padding: 30px 0;
   align-items: center;
 }
 .upload-modal-body-fileIcon {
   grid-area: fileIcon;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 10px;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  padding-top: 30px;
+}
+.upload-modal-body-fileIcon-icon > p {
+    width: 100px;
 }
 .upload-modal-body-fileInfo {
   grid-area: fileInfo;
@@ -57,4 +62,25 @@
   flex-direction: column;
   gap: 10px;
   margin-left: auto;
+}
+
+.delete-confirm-modal-container {
+  margin: auto;
+  padding: 32px;
+}
+.delete-confirm-modal-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 15px;
+}
+.delete-confirm-modal-body-icon {
+  padding: 15px;
+}
+
+.delete-confirm-modal-body-message {
+  font-size: 16px;
+  text-align: center;
 }
