--- a/src/components/pages/casestatus/ProgressSection.css
+++ b/src/components/pages/casestatus/ProgressSection.css
@@ -81,8 +81,12 @@
 
 .card-content {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+}
+
+.lawyer-review-message {
+  flex-grow: 1;
 }
 
 .custom-button {
@@ -91,6 +95,8 @@
   color: #f2994a;
   margin-left: 8px;
   font-size: 14px;
+  flex-shrink: 0;
+  white-space: nowrap;
 }
 
 .button-group {
@@ -99,7 +105,7 @@
   gap: 8px;
 }
 
-.card-content {
+.filling-details-card-content {
   display: flex;
   flex-direction: column;
 }
@@ -120,5 +126,4 @@
 
 .metadata-value {
   margin-left: 10px;
-  color: #27ae60;
 }
