--- a/src/components/pages/dashboard/CaseCard.css
+++ b/src/components/pages/dashboard/CaseCard.css
@@ -1,6 +1,9 @@
 .case-card-content {
   padding: 20px 30px 20px 35px;
 }
+.case-card-container {
+  max-width: 450px;
+}
 
 .case-card-bottom {
   border-top: 1px solid var(--gray-color-3);
@@ -11,7 +14,8 @@
 
 .case-card-title {
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 5px;
   height: 30px;
 }
 
@@ -19,11 +23,22 @@
   flex-direction: column;
 }
 
-.case-card-caseName {
-  margin-top: 3px;
+.case-card-Name {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center; 
 }
-.case-card-title-input {
-  width: 150px;
+.case-card-caseName {
+  width: auto;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.case-card-name-input {
+  /* height: 35px; */
+  width: auto;
 }
 .case-card-edit {
   gap: 5px;
@@ -31,9 +46,10 @@
 }
 
 .case-card-progress {
+  width: 150px;
   position: relative;
   background-color: var(--gray-color-4);
-  padding: 2px 10px;
+  padding: 5px 10px;
   border-radius: 5px;
 }
 
@@ -55,9 +71,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 40px 0 20px 0;
+  padding-top: 60px;
 }
 
-.case-card-container {
-  max-width: 450px;
-}
+
