--- a/src/components/form/FormContent.css
+++ b/src/components/form/FormContent.css
@@ -1,10 +1,14 @@
 .form-content {
+  display: flex;
   position: relative;
   width: 100%;
   font-size: var(--font-size-p2);
+  max-width: 1200px;
+}
+
+.form-content-form-container {
   flex-grow: 1;
   overflow-y: auto;
-  max-width: 1200px;
 }
 
 .form-content-header {
@@ -24,7 +28,9 @@
 
 .form-content-form {
   padding: 40px;
+  padding-bottom: 100px;
   background-color: var(--white-color);
+  border-radius: 0 0 10px 10px;
 }
 
 .xsmall .form-content-form,
@@ -36,12 +42,17 @@
   margin-bottom: 40px;
 }
 
+.form-content-controls-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .form-content-controls {
   display: flex;
   justify-content: space-between;
   padding: 20px 40px;
   background-color: var(--white-color);
-  border-radius: 0 0 10px 10px;
   border-top: 1px solid var(--gray-color-4);
 }
 
