--- a/src/components/common/Fonts.css
+++ b/src/components/common/Fonts.css
@@ -60,6 +60,12 @@
 .text.margin-bottom-10 {
   margin-bottom: 10px;
 }
+.text.margin-bottom-0 {
+  margin-bottom: 0;
+}
+.text.margin-5 {
+  margin: 5px;
+}
 
 .single-line-text {
   display: flex;
