--- a/src/components/pages/dashboard/CaseCard.css
+++ b/src/components/pages/dashboard/CaseCard.css
@@ -1,10 +1,23 @@
 .case-card-container {
   max-width: 450px;
+  position: relative;
 }
+
+
 .case-card-caseIcon > svg {
   border-bottom: 1px solid var(--gray-color-3);
   height: auto;
 }
+.case-card-status {
+  position: absolute;
+  text-align: center;
+  width: 50px;
+  margin: 0 0 0 380px;
+  padding: 5px 10px;
+  border-top-right-radius: 10px;
+  background-color: var(--primary-color-trans1);
+}
+
 .case-card-content {
   padding: 10px 30px 20px 40px;
 }
