--- a/src/components/form/fields/PersonalStatement.css
+++ b/src/components/form/fields/PersonalStatement.css
@@ -1,4 +1,5 @@
 .text-area-container {
+  height: 1000px;
   display: flex;
   flex-direction: row;
 }
@@ -11,6 +12,7 @@
 }
 
 .text-area-after {
+  height: inherit;
   width: 50%;
   border: 1px solid var(--gray-color-3);
   border-radius: 3px;
@@ -41,7 +43,7 @@
 }
 
 .text-area-input {
-  height: 360px !important;
+  height: 950px !important;
   resize: none !important;
   padding: 5px !important;
 }
