form ui improve

--- a/src/components/form/fields/PersonalStatement.css
+++ b/src/components/form/fields/PersonalStatement.css
@@ -26,10 +26,15 @@
 }
 
 .ps-text-area-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: var(--primary-color);
   background-color: var(--primary-color-light);
   border-radius: 5px;
+
   margin: 5px;
+  padding: 4px 16px 4px 10px;
   cursor: pointer;
 }
 
