--- a/src/components/form/fields/TextAreaWithAIRefine.css
+++ b/src/components/form/fields/TextAreaWithAIRefine.css
@@ -43,7 +43,7 @@
   color: var(--gray-color-2);
   border-radius: 5px;
   margin-left: auto;
-  /* margin-right: 10px; */
+  margin-right: 10px;
   transition: color 0.3s ease-in-out;
 }
 .text-area-button-discard:hover {
