--- a/src/components/form/fields/TextAreaWithAIRefine.css
+++ b/src/components/form/fields/TextAreaWithAIRefine.css
@@ -47,7 +47,7 @@
   transition: color 0.3s ease-in-out;
 }
 .text-area-button-discard:hover {
-  color: var(--gray-color-2);
+  color: var(--danger-color);
 }
 
 .text-area-input {
