--- a/src/components/pages/casestatus/CaseProgressCard.css
+++ b/src/components/pages/casestatus/CaseProgressCard.css
@@ -21,7 +21,7 @@ body {
 }
 
 .ant-steps-item-icon {
-  margin-left: 35px !important
+  margin-left: 35px !important;
 }
 .ant-steps-item-content {
   margin-top: 0 !important;
