--- a/src/components/pages/dashboard/CaseCard.css
+++ b/src/components/pages/dashboard/CaseCard.css
@@ -28,7 +28,7 @@
 
 .case-card-content {
   padding: 0 25px 25px 30px;
-  margin-top: -5px
+  margin-top: -5px;
 }
 .case-card-bottom {
   border-top: 1px solid var(--gray-color-3);
