--- a/src/components/pages/casestatus/CaseStatusLayout.css
+++ b/src/components/pages/casestatus/CaseStatusLayout.css
@@ -49,9 +49,15 @@
   position: relative;
 }
 
-.draft-tag {
+.overview-status {
+  box-sizing: content-box;
   position: absolute;
   top: 0;
   right: 0;
   z-index: 1;
+  text-align: center;
+  margin: 0;
+  padding: 3px 5px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
 }
