Form-missing style improve

--- a/src/components/form/FormControlContainer.css
+++ b/src/components/form/FormControlContainer.css
@@ -1,6 +1,6 @@
 .form-control-container-missing {
   position: relative;
-  border-left: 3px solid var(--danger-color);
+  border-left: 3px solid var(--warning-color);
 }
 .form-control-container {
   position: relative;
