--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -7,7 +7,7 @@
   --link-color: #2b8852;
   --success-color: #28a745;
   --danger-color: #dc3545;
-  --warning-color: #F2994A;
+  --warning-color: #f2994a;
   --info-color: #17a2b8;
   --line-color: #231f20;
   --white-color: #ffffff;
