Case document table height fix

--- a/src/components/pages/casestatus/CaseDocumentRightPanel.css
+++ b/src/components/pages/casestatus/CaseDocumentRightPanel.css
@@ -4,7 +4,6 @@
 
 .case-document-right-panel {
   overflow-y: auto;
-  max-height: 420px;
 }
 .case-document-file-upload {
   display: flex;
@@ -41,7 +40,8 @@
 
 .case-document-display-section {
   margin-top: 18px;
-  /* overflow-y: auto; */
+  overflow-y: auto;
+  max-height: 350px;
 }
 .case-document-file-table {
   max-height: 500px;
