--- a/src/components/pages/home/Common.css
+++ b/src/components/pages/home/Common.css
@@ -26,6 +26,7 @@
   font-size: var(--font-size-h2);
   font-weight: var(--font-weight-bold);
   line-height: 56px;
+  padding-bottom: 20px;
 }
 
 .xsmall .text-block-title,
