--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -3,7 +3,9 @@
   --primary-color-trans1: rgba(39, 174, 96, 0.2);
   --primary-color-light: rgba(39, 174, 96, 0.1);
   --primary-color-light-notrans: #ebf7ef;
+  --primary-color-background: #dbf9e7fe;
   --secondary-color: #6c757d;
+  --dark-gray-color: #3E4C6F;
   --link-color: #2b8852;
   --success-color: #28a745;
   --danger-color: #dc3545;
