--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -5,7 +5,7 @@
   --primary-color-light-notrans: #ebf7ef;
   --primary-color-background: #dbf9e7fe;
   --secondary-color: #6c757d;
-  --dark-gray-color: #3E4C6F;
+  --dark-gray-color: #3e4c6f;
   --link-color: #2b8852;
   --success-color: #28a745;
   --danger-color: #dc3545;
