--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -62,7 +62,7 @@
   margin: 20px 0;
 }
 
-.xsmall .landing-page-title,
+/* .xsmall .landing-page-title,
 .small .landing-page-title {
   width: 80%;
 }
@@ -73,7 +73,7 @@
 
 .cn.large .landing-page-title {
   width: 25%;
-}
+} */
 
 .buildings {
   width: 36%;
