--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -1,5 +1,6 @@
 .home-container {
   overflow-y: auto;
+  overflow-x: hidden;
   height: calc(100vh - 72px);
   position: sticky;
   top: 0;
@@ -44,7 +45,7 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
-  margin-top: -15%;
+  margin-top: -10%;
 }
 
 .border-bottom-2px {
@@ -59,7 +60,7 @@
 
 .landing-page-title {
   width: 50%;
-  margin: 20px 0;
+  margin: 20px 0 40px;
 }
 
 /* .xsmall .landing-page-title,
@@ -76,13 +77,13 @@
 } */
 
 .buildings {
-  width: 36%;
+  width: 30%;
   margin-bottom: -2px;
   max-width: 600px;
 }
 
 .liberty {
-  width: 50%;
+  width: 40%;
   margin-bottom: -2px;
   max-width: 800px;
 }
@@ -110,10 +111,10 @@
 }
 
 .home-video {
-  margin: 40px 20px 80px 20px;
-  width: 710px;
-  height: 400px;
-  z-index: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 80px 0;
 }
 
 .xsmall .home-video,
@@ -123,13 +124,8 @@
 }
 
 .home-video-player iframe {
-  width: 100%;
-  height: 100%;
+  width: 850px;
+  height: 500px;
   border-radius: 12px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-}
-
-.home-highlights {
-  justify-content: center;
-  background-color: var(--primary-color-light);
 }
