--- a/src/components/pages/home/Features.css
+++ b/src/components/pages/home/Features.css
@@ -5,7 +5,6 @@
   align-items: center;
 
   background-color: var(--gray-color-4);
-  padding-bottom: 80px;
 }
 
 .section-title-button {
@@ -19,6 +18,9 @@
 .hf-text-block {
   padding: 0 20px 20px 20px !important;
 }
+.hf-text-block.text-block-description {
+  min-height: 60px;
+}
 .text-block-title.h3 {
   color: black !important;
 }
@@ -28,7 +30,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 20px 40px;
+  padding: 40px;
 }
 .xsmall .hf-section,
 .small .hf-section {
@@ -45,7 +47,7 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-  padding: 0 20px;
+  padding-left: 40px;
 }
 .hf-subsection-item {
   display: flex;
@@ -53,12 +55,11 @@
   align-items: center;
 
   gap: 10px;
-  min-height: 160px;
-  padding: 10px 0;
+  padding: 20px 0;
 }
 .hf-subsection-item svg {
   min-width: 50px;
-  padding-bottom: 30px;
+  align-self: flex-start;
 }
 
 .hf-text-block.text-block-description {
